# bflow

./: AGENTS.md  README.md  README.zh-CN.md  agent-browser-chrome-devtools-guide.md  pyproject.toml
.bflow/: README.md  agent-browser-setup.md  config.json
.bflow/cases/: README.md
.bflow/cases/examples/: login-admin-smoke.yaml
.bflow/cases/templates/: test-flow.template.yaml
.bflow/prompts/: diagnose.md  explore.md  new.md  replay.md  router.md
.github/: copilot-instructions.md
.github/prompts/: bflow-diagnose.prompt.md  bflow-explore.prompt.md  bflow-new.prompt.md  bflow-replay.prompt.md
bflow/: __main__.py  cli.py  doctor.py  installer.py  templates.py
cases/: README.md
cases/examples/: login-admin-smoke.yaml
cases/templates/: test-flow.template.yaml
prompts/: diagnose.md  explore.md  new.md  replay.md  router.md
tests/: test_init.py
