[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bflow"
version = "0.1.0"
description = "Initialize a browser-test workflow library for multiple coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "zlw" }
]

[project.scripts]
bflow = "bflow.cli:main"

[tool.setuptools]
packages = ["bflow"]
